applications/backbone/routes/oidc/route.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc
  namespace: backbone
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-proxy
  oidc:
    provider:
      issuer: "https://casdoor.open.jynolen.fr/"
    clientID: "815d4d9da589b1f0ecc4"
    clientSecret:
      name: envoy-client-secret
    forwardAccessToken: true
    redirectURL: "https://envoy.jynolen.fr/oauth2/callback"
    cookieDomain: jynolen.fr
    cookieNames:
      accessToken: EnvoyAccessToken
      idToken: EnvoyIdToken
  authorization:
    defaultAction: Deny
    rules:
    - name: "allow-jwt-claim"
      action: Allow
      principal:
        jwt:
          provider: cassdoor
          claims:
          - name: iss
            valueType: String
            values:
            - https://casdoor.open.jynolen.fr/
  jwt:
    providers:
      - name: cassdoor
        issuer: https://casdoor.open.jynolen.fr/
        remoteJWKS:
          uri: https://casdoor.open.jynolen.fr/.well-known/jwks
        claimToHeaders:
        - header: X-Forwarded-User
          claim: name
        - header: X-Forwarded-Email
          claim: email
        - header: X-Forwarded-Roles
          claim: roles               
        extractFrom: 
          cookies:
            - "envoy-access-token"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-redirect
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: ListenerSet
      name: envoy
  hostnames:
    - envoy.jynolen.fr
  rules:
    - matches:
        - path:
            type: Exact
            value: /oauth2/callback
      backendRefs:
        - group: ""
          kind: Service
          name: oidc-redirect
          port: 8080
